Bug 1328470 - XMLHttpRequest should reset timers when send() is executed again, r=smaug